fix: color picker selector peeking when collapsed

--- a/src/pages/Settings/GroupThemeColorPage/GroupThemeColor.less
+++ b/src/pages/Settings/GroupThemeColorPage/GroupThemeColor.less
@@ -74,6 +74,7 @@
 
             &.collapsed {
                 height: 0;
+                visibility: hidden;
             }
 
             .color-picker {
